Added support for drafts
